@@ -154,9 +154,13 @@ description of the <TT>fl_</TT> functions, see
 	    <LI><A HREF="Fl_Repeat_Button.html#Fl_Repeat_Button">Fl_Repeat_Button</A>
 	    <LI><A HREF="Fl_Return_Button.html#Fl_Return_Button">Fl_Return_Button</A>
 	    <LI><A HREF="Fl_Round_Button.html#Fl_Round_Button">Fl_Round_Button</A>
+	    <LI><A HREF="Fl_Toggle_Button.html#Fl_Toggle_Button">Fl_Toggle_Button</A>
 	</UL>
 	<LI><A HREF="Fl_Chart.html#Fl_Chart">Fl_Chart</A>
-	<LI><A HREF="Fl_Clock.html#Fl_Clock">Fl_Clock</A>
+	<LI><A HREF="Fl_Clock_Output.html#Fl_Clock_Output">Fl_Clock_Output</A>
+	<UL>
+	    <LI><A HREF="Fl_Clock.html#Fl_Clock">Fl_Clock</A>
+	</UL>
 	<LI><A HREF="Fl_Free.html#Fl_Free">Fl_Free</A>
 	<LI><A HREF="Fl_Group.html#Fl_Group">Fl_Group</A>
 	<UL>
