@@ -1,6 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
-	- Documentation fixes (STR #1336, STR #1329, STR #1339)
+	- Documentation fixes (STR #1336, STR #1329, STR #1339,
+	  STR #1340)
 	- Added support for floating point Fl_Spinner in the
 	  API, documentation, and Fluid (STR #1331)
 	- Repeat button now cancels timeout if it should get 
